--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-calendar": "^3.7.0",
     "react-chartjs-2": "^4.2.0",
     "react-cropper": "^2.1.8",
