--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "chart.js": "^3.8.0",
+    "chartjs": "^0.3.24",
     "dayjs": "^1.11.4",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-calendar": "^3.7.0",
-    "react-chartjs-2": "^2.7.2",
+    "react-chartjs-2": "^4.3.1",
     "react-cropper": "^2.1.8",
     "react-dom": "^18.2.0",
     "react-facebook-login": "^4.1.1",
