--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "chart.js": "^3.9.1",
     "chartjs": "^0.3.24",
     "dayjs": "^1.11.4",
+    "gap-script": "^1.1.3",
+    "gapi-script": "^1.2.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-chartjs-2": "^4.3.1",
@@ -24,6 +26,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-share": "^4.4.0",
+    "react-slideshow-image": "^4.0.5",
     "react-uuid": "^2.0.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
