--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
